It's alive! It boots but many mixins still disabled.